Split data into train and val

--- a/notebooks/make_stim_dataset.ipynb
+++ b/notebooks/make_stim_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +177,56 @@
     "\n",
     "print(f\"Final dataset saved to {nsd_dataset_file}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Divide the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data segmentation and saving completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "input_file = 'nsd_dataset.csv'\n",
+    "df = pd.read_csv(input_file)\n",
+    "\n",
+    "# Extract the caption column and generate the id column\n",
+    "captions = df['caption'] \n",
+    "ids = range(len(captions))\n",
+    "\n",
+    "\n",
+    "# create new DataFrame\n",
+    "new_df = pd.DataFrame({'filepath': ids, 'title': captions})\n",
+    "\n",
+    "# Split data into train and val\n",
+    "train_df = new_df.iloc[:27000]\n",
+    "val_df = new_df.iloc[27000:]\n",
+    "\n",
+    "train_df.to_csv('train.csv', index=False)\n",
+    "val_df.to_csv('val.csv', index=False)\n",
+    "\n",
+    "print(\"Data segmentation and saving completed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
